--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=640, target-densitydpi=device-dpi, user-scalable=no"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
 
-    <script type="text/javascript" src="../server.js"></script>
+    <script type="text/javascript" src="../orienter.js"></script>
 
     <style>
         ul, li {
@@ -23,7 +23,7 @@
         html, body {
             background: #000;
             color: #fff;
-            font-family:  Helvetica, Verdana, sans-serif;
+            font-family: Helvetica, Verdana, sans-serif;
             font-size: 10px;
         }
         #tip {
@@ -44,6 +44,8 @@
             'alpha:' + obj.a +
             '<br>' + 'beta:' + obj.b +
             '<br>' + 'gamma:' + obj.g +
+            '<br>' + 'longitude:' + obj.lon +
+            '<br>' + 'latitude:' + obj.lat +
             '<br>' + 'direction:' + obj.dir;
     };
     o.init();
