--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
             'alpha:' + obj.a +
             '<br>' + 'beta:' + obj.b +
             '<br>' + 'gamma:' + obj.g +
-            '<br>' + 'direction:' + obj.dir;
+            '<br>' + 'direction:' + obj.dir +
+            '<br>' + 'absolute:' + obj.abs;
     };
     o.init();
 </script>
