--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8"/>
@@ -51,4 +51,21 @@
 </script>
 
 </body>
+</html>
+ -->
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>API Test</title>
+        <script type="text/javascript" src="server.js"></script>
+    </head>
+    <body>
+        <h1>Device API</h1>
+        Absolute: <div id='absolute'></div>
+        Alpha: <div id='alpha'></div>
+        Beta: <div id='beta'></div>
+        Gamma: <div id='gamma'></div>
+    </body>
 </html>
