--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </body>
 </html>
  -->
-<!-- 
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -68,10 +68,10 @@
         Beta: <div id='beta'></div>
         Gamma: <div id='gamma'></div>
     </body>
-</html> -->
+</html>
 
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -79,7 +79,7 @@
 </head>
 <body>
 <!-- 代码来自http://www.oxxostudio.tw/articles/201506/html5-device-orientation.html -->
-<style type="text/css">
+<!-- <style type="text/css">
 #compass{
   margin:0 auto;
   width:90%;
@@ -124,4 +124,4 @@ if(window.DeviceOrientationEvent) {
 
 
 </body>
-</html>
+</html> -->
