--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	<title>compass</title>
 </head>
 <body>
-<!-- 代码来自http://www.oxxostudio.tw/articles/201506/html5-device-orientation.html -->
+代码来自http://www.oxxostudio.tw/articles/201506/html5-device-orientation.html -->
 <!-- <style type="text/css">
 #compass{
   margin:0 auto;
